add friend，add refresh token
